@@ -1,0 +1,1 @@
+Options -c -o are incompatible with compiling multiple files
